GNOME Bugzilla – Bug 659601
offscreen effects on children of containers also with an offscreen effect get a wrong viewport
Last modified: 2011-09-22 12:34:45 UTC
Created attachment 197073 [details] test case In the test case attached, when both the container and the child have a ClutterDesaturateEffect applied, the child gets only partially drawn on screen, because of having the viewport wrongly defined. By reverting a297fb039409733afa7df6eaeb2d28f1af1a93a3 this test case works, but of course other things break.
Created attachment 197167 [details] [review] clutter-offscreen-effect: Apply matrix expansion to proj not mv When the viewport gets expanded because the actor extends off the edge of the screen, instead of applying the transformation to the root of the modelview transformation it is now applied to the end of the projection transformation. This should end up with the same transformation. This fixes a problem when the offscreen effects are nested and the inner effect would try to pick up the current modelview transformation to rescale it to fit the new viewport size. In this case the modelview would have already been scaled for the size of the outer viewport so it would end up wrong.
Review of attachment 197167 [details] [review]: looks good to me. apply to master, and I'll backport it to clutter-1.8 once the hard code freeze is lifted.
Pushed as c67d3e5b52955